Archive2/e2/35781d394d31e1/main.cpp
#include <cmath>

int main ()
{
    auto x = &(std::abs<double>);
}